src/main/java/com/example/error/InvalidCredentialsException.java
package com.example.error;

/**
 * 認証情報（メールアドレス／パスワード）が正しくない場合のドメイン例外。
 */
public class InvalidCredentialsException extends RuntimeException {
}
